...
                            fontSize = (max(min(bibleState.fontSize * 1.4F, 40.0F), 16F)).sp
                        ),

                        leadingIcon = {
                            Icon(
                                imageVector = Icons.Filled.Search,
                                contentDescription = "Search"
                            )
                        },
                        trailingIcon = {
                            IconButton(
                                onClick = {
                                    if (searchQuery.isNotEmpty()) {
...
                            ) {
                                Icon(
                                    imageVector = Icons.Filled.Close,
                                    contentDescription = if (searchQuery.isNotEmpty()) {
                                        "Clear search query"
                                    } else {
                                        "Close search"
                                    }
                                )
                            }
                        },
                        keyboardOptions = KeyboardOptions(imeAction = ImeAction.Search),
                        keyboardActions = KeyboardActions(
...
