...
const val MANIFEST_JSON_POSTFIX = ".0.manifest.json"

const val CONFIG_FILE_NAME = "config.json"
const val HISTORY_FILE_NAME = "history.json"

val webusGenesisChapterOne = """
            1 In the beginning, God created the heavens and the earth.
            2 The earth was formless and empty. Darkness was on the surface of the deep and God’s Spirit was hovering over the surface of the waters.
            3 God said, “Let there be light,” and there was light.
            4 God saw the light, and saw that it was good. God divided the light from the darkness.
            5 God called the light “day”, and the darkness he called “night”. There was evening and there was morning, the first day.
            6 God said, “Let there be an expanse in the middle of the waters, and let it divide the waters from the waters.”
            7 God made the expanse, and divided the waters which were under the expanse from the waters which were above the expanse; and it was so.
...
